testsuite/tests/grammar/invalid_or/test.out
== foo.lkt ==
foo.lkt:6:16: error: Alternatives yield incompatible types: Sequence, Token
6 |     element <- or(atom | sequence)
  |                ^^^^^^^^^^^^^^^^^^^


lkt_compile: Done
